--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>My Shop - Your One Stop Online Shop!</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,71 +42,54 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">My Shop</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="#">About</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                        <a href="#">Gallery</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="#">Contact Us</a>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="portfolio-1-col.html">1 Column Portfolio</a>
+                                <a href="#">Women's Fashion</a>
                             </li>
                             <li>
-                                <a href="portfolio-2-col.html">2 Column Portfolio</a>
+                                <a href="#">Men's Fashion</a>
                             </li>
                             <li>
-                                <a href="portfolio-3-col.html">3 Column Portfolio</a>
+                                <a href="#">Kid's Fashion</a>
                             </li>
                             <li>
-                                <a href="portfolio-4-col.html">4 Column Portfolio</a>
+                                <a href="#">Gadgets and Electronics</a>
                             </li>
                             <li>
-                                <a href="portfolio-item.html">Single Portfolio Item</a>
+                                <a href="#">Sports and Travel</a>
+                            </li>
+                            <li>
+                                <a href="#">Automotive Parts and Accessories</a>
                             </li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="blog-home-1.html">Blog Home 1</a>
+                                <a href="#">Main Headquarters</a>
                             </li>
                             <li>
-                                <a href="blog-home-2.html">Blog Home 2</a>
+                                <a href="#">Customer Feedbacks</a>
                             </li>
                             <li>
-                                <a href="blog-post.html">Blog Post</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="full-width.html">Full Width Page</a>
-                            </li>
-                            <li>
-                                <a href="sidebar.html">Sidebar Page</a>
-                            </li>
-                            <li>
-                                <a href="faq.html">FAQ</a>
-                            </li>
-                            <li>
-                                <a href="404.html">404</a>
-                            </li>
-                            <li>
-                                <a href="pricing.html">Pricing Table</a>
+                                <a href="#">Company Profile</a>
                             </li>
                         </ul>
                     </li>
@@ -129,19 +112,19 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
+                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"><img src="images\fashion1.png"></div>
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
+                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"><img src="images\fashion2.png"></div>
                 <div class="carousel-caption">
                     <h2>Caption 2</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"><img src="images\fashion3.png"></div>
                 <div class="carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
@@ -170,33 +153,33 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Bootstrap v3.3.7</h4>
+                        <h4><i class="fa fa-fw fa-check"></i> One-Stop Shopping Destination</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <p>With hundreds of thousands of products across categories including women’s, men’s, kid’s, gadgets and electronics, sports and travel, My Shop is the place to visit for all your shopping needs. Besides an extensive selection of international and local brands, you’ll also find exciting products that are available exclusively on MyShop.</p>
+                        <a href="#" class="btn btn-default">Back to Top</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Free &amp; Open Source</h4>
+                        <h4><i class="fa fa-fw fa-gift"></i> Easy and Accessible Shopping</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <p>No more traffic jams, crowds and long queues! Shop anytime, anywhere via your computer and mobile phone. With our quick and reliable delivery service, just sit back, relax and your package will come to you.</p>
+                        <a href="#" class="btn btn-default">Back to Top</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-compass"></i> Easy to Use</h4>
+                        <h4><i class="fa fa-fw fa-compass"></i> Safe and Secure Shopping</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <p>We provide our customers with a broad range of secure payment options including cash-on-delivery, where you pay in cash only when you receive your package. Be assured of product quality and authenticity: All purchases on My Shop are guaranteed to be genuine products, new, not defective or damaged. If it is, simply return it within 7 days for a full refund under our Buyer Protection Program.</p>
+                        <a href="#" class="btn btn-default">Back to Top</a>
                     </div>
                 </div>
             </div>
@@ -206,36 +189,36 @@
         <!-- Portfolio Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Portfolio Heading</h2>
+                <h2 class="page-header">Highlights</h2>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a href="#">
+                    <img class="img-responsive img-portfolio img-hover" src="images\highlights1.png" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a href="#">
+                    <img class="img-responsive img-portfolio img-hover" src="images\highlights2.png" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a href="#">
+                    <img class="img-responsive img-portfolio img-hover" src="images\highlights3.png" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a href="#">
+                    <img class="img-responsive img-portfolio img-hover" src="images\highlights4.png" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a href="#">
+                    <img class="img-responsive img-portfolio img-hover" src="images\highlights5.png" alt="">
                 </a>
             </div>
             <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                <a href="#">
+                    <img class="img-responsive img-portfolio img-hover" src="images\highlights6.png" alt="">
                 </a>
             </div>
         </div>
@@ -244,23 +227,31 @@
         <!-- Features Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Modern Business Features</h2>
+                <h2 class="page-header">My Shop Features</h2>
             </div>
             <div class="col-md-6">
-                <p>The Modern Business template by Start Bootstrap includes:</p>
+                <p>My Shop includes:</p>
                 <ul>
-                    <li><strong>Bootstrap v3.3.7</strong>
+                    <li><strong>Multi-device versions</strong>
                     </li>
-                    <li>jQuery v1.11.1</li>
-                    <li>Font Awesome v4.2.0</li>
-                    <li>Working PHP contact form with validation</li>
-                    <li>Unstyled page elements for easy customization</li>
-                    <li>17 HTML pages</li>
+                    <li>Intuitive website interface</li>
+                    <li>24/7 Customer service</li>
+                    <li>1000+ partners around the Globe</li>
+                    <li>Speedy delivery</li>
+                    <li>Serving nearly one-tenth of earth</li>
+                    <li>Online Order Tracking</li>
+                    <li>Website Security</li>
+                    <li>Express Checkout</li>
+                    <li>Real-Time Inventory</li>
+                    <li>Product Reviews</li>
+                    <li>Customer Feedbacks</li>
+                    <li>...and Many more...</li>
                 </ul>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
+                <p>Founded in 2016, MY SHOP is known to be the fastest growing online fashion retailer in Asia. Localizing its products to fit the customer demands in different countries from Singapore, Malaysia & Brunei, Indonesia, Hong Kong, the Philippines, Vietnam, and Thailand definitely brings you the trendiest fashion trends online. With over 1000 international and local brands available on the site, customers can easily browse through the wide selection of clothes, accessories, bags and more while embracing the use of technology.</p>
+				<p>MY SHOP is the one stop online fashion destination with thousands of new products coming in every week to keep customers excited. Believing that your online shopping experience should be easy and fun, we offer speedy deliveries with 30 days free return policy as well as various payment methods. To get the scoop on our latest arrivals and fast changing trends, connect with us on our social media platforms such as Facebook, Instagram and Twitter.</p>
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/700x450" alt="">
+                <img class="img-responsive" src="C:\Users\ZilefStorm\Desktop\Layout1\startbootstrap-modern-business-gh-pages\images\feature.png" alt="">
             </div>
         </div>
         <!-- /.row -->
@@ -271,10 +262,10 @@
         <div class="well">
             <div class="row">
                 <div class="col-md-8">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+                    <p>MY SHOP is a part of the world’s leading fashion group which is Global Fashion Group. Established in 2011, the GFG was dedicated to help online fashion companies emerge in its market. The Global Fashion Group operates in 27 countries with presence in India, South America, Russia and the Middle East. Being a part of GFG, MY SHOP has grown throughout the years as the voice of fashion in the region.</p>
                 </div>
                 <div class="col-md-4">
-                    <a class="btn btn-lg btn-default btn-block" href="#">Call to Action</a>
+                    <a class="btn btn-lg btn-default btn-block" href="#">Back to Top</a>
                 </div>
             </div>
         </div>
@@ -285,7 +276,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; My Shop 2016</p>
                 </div>
             </div>
         </footer>
