--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 				<p>MY SHOP is the one stop online fashion destination with thousands of new products coming in every week to keep customers excited. Believing that your online shopping experience should be easy and fun, we offer speedy deliveries with 30 days free return policy as well as various payment methods. To get the scoop on our latest arrivals and fast changing trends, connect with us on our social media platforms such as Facebook, Instagram and Twitter.</p>
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="images/feature.png" alt="">
+                <img class="img-responsive" src="images\feature.png" alt="">
             </div>
         </div>
         <!-- /.row -->
